<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory android:title="@string/loginConfig">

                <EditTextPreference android:id="@+id/emailInput" android:key="@string/pref_username" android:title="@string/username"
                        android:summary="@string/userSubtitle" android:inputType="textEmailAddress" />

                <EditTextPreference android:key="@string/pref_password" android:title="@string/password"
                        android:summary="@string/passwordSubtitle" android:inputType="textPassword" />

                <CheckBoxPreference android:key="@string/pref_connectionAutoEnable" android:title="@string/connectionAutoEnable"
                        android:defaultValue="false" android:summary="@string/connectionAutoSummary" />
        </PreferenceCategory>
</PreferenceScreen>  
